Add better auth support (#74)
