# packages/docusaurus-theme-openapi/src/theme/ApiDemoPanel/redux/auth-types.ts
@@ -1,0 +1,28 @@
+/* ============================================================================
+ * Copyright (c) Cloud Annotations
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ * ========================================================================== */
+
+export interface Security {
+  key: string;
+  scopes: string[];
+  type: string;
+  [key: string]: any;
+}
+
+export function getAuthDataKeys(security: Security) {
+  // Bearer Auth
+  if (security.type === "http" && security.scheme === "bearer") {
+    return ["token"];
+  }
+
+  // Basic Auth
+  if (security.type === "http" && security.scheme === "basic") {
+    return ["username", "password"];
+  }
+
+  // none
+  return [];
+}
